--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-react-views": "^0.11.0",
-    "expresss": "^0.0.0"
+    "expresss": "^0.0.0",
+    "method-override": "^3.0.0"
   }
 }
